macos/openim_sdk_ffi_apple.h

extern void MarkMessagesAsReadByMsgID(char* operationID, char* conversationID, char* clientMsgIDs);
extern void DeleteMessageFromLocalStorage(char* operationID, char* conversationID, char* clientMsgID);
extern void DeleteMessage(char* operationID, char* conversationID, char* clientMsgID);
extern void DeleteConversationFromLocal(char* operationID, char* conversationID);
extern void DeleteAllMsgFromLocalAndSvr(char* operationID);
extern void DeleteAllMsgFromLocal(char* operationID);
extern void ClearConversationAndDeleteAllMsg(char* operationID, char* conversationID);
extern void DeleteConversationAndDeleteAllMsg(char* operationID, char* conversationID);
extern void InsertSingleMessageToLocalStorage(char* operationID, char* message, char* recvID, char* sendID);
extern void InsertGroupMessageToLocalStorage(char* operationID, char* message, char* groupID, char* sendID);
extern void SearchLocalMessages(char* operationID, char* searchParam);
extern void SetMessageLocalEx(char* operationID, char* conversationID, char* clientMsgID, char* localEx);
extern void GetSpecifiedFriendsInfo(char* operationID, char* userIDList);
extern void GetFriendList(char* operationID);
extern void GetFriendListPage(char* operationID, int32_t offset, int32_t count);
extern void SearchFriends(char* operationID, char* searchParam);
extern void CheckFriend(char* operationID, char* userIDList);
extern void AddFriend(char* operationID, char* userIDReqMsg);
extern void SetFriendRemark(char* operationID, char* userIDRemark);
extern void DeleteFriend(char* operationID, char* friendUserID);
extern void GetFriendApplicationListAsRecipient(char* operationID);