lib/openim_sdk_ffi_bindings_generated.dart


  late final _MarkMessagesAsReadByMsgIDPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('MarkMessagesAsReadByMsgID');
  late final _MarkMessagesAsReadByMsgID =
      _MarkMessagesAsReadByMsgIDPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>();

  void DeleteMessageFromLocalStorage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
    ffi.Pointer<ffi.Char> clientMsgID,
  ) {
    return _DeleteMessageFromLocalStorage(
      operationID,
      conversationID,
      clientMsgID,
    );
  }

  late final _DeleteMessageFromLocalStoragePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('DeleteMessageFromLocalStorage');
  late final _DeleteMessageFromLocalStorage =
      _DeleteMessageFromLocalStoragePtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>();

  void DeleteMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
    ffi.Pointer<ffi.Char> clientMsgID,
  ) {
    return _DeleteMessage(
      operationID,
      conversationID,
      clientMsgID,
    );
  }

  late final _DeleteMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('DeleteMessage');
  late final _DeleteMessage = _DeleteMessagePtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  void DeleteConversationFromLocal(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
  ) {
    return _DeleteConversationFromLocal(
      operationID,
      conversationID,
    );
  }

  late final _DeleteConversationFromLocalPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('DeleteConversationFromLocal');
  late final _DeleteConversationFromLocal =
      _DeleteConversationFromLocalPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void DeleteAllMsgFromLocalAndSvr(
    ffi.Pointer<ffi.Char> operationID,
  ) {
    return _DeleteAllMsgFromLocalAndSvr(
      operationID,
    );
  }

  late final _DeleteAllMsgFromLocalAndSvrPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'DeleteAllMsgFromLocalAndSvr');
  late final _DeleteAllMsgFromLocalAndSvr = _DeleteAllMsgFromLocalAndSvrPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  void DeleteAllMsgFromLocal(
    ffi.Pointer<ffi.Char> operationID,
  ) {
    return _DeleteAllMsgFromLocal(
      operationID,
    );
  }

  late final _DeleteAllMsgFromLocalPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'DeleteAllMsgFromLocal');
  late final _DeleteAllMsgFromLocal = _DeleteAllMsgFromLocalPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>)>();

  void ClearConversationAndDeleteAllMsg(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
  ) {
    return _ClearConversationAndDeleteAllMsg(
      operationID,
      conversationID,
    );
  }

  late final _ClearConversationAndDeleteAllMsgPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('ClearConversationAndDeleteAllMsg');
  late final _ClearConversationAndDeleteAllMsg =
      _ClearConversationAndDeleteAllMsgPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void DeleteConversationAndDeleteAllMsg(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
  ) {
    return _DeleteConversationAndDeleteAllMsg(
      operationID,
      conversationID,
    );
  }

  late final _DeleteConversationAndDeleteAllMsgPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('DeleteConversationAndDeleteAllMsg');
  late final _DeleteConversationAndDeleteAllMsg =
      _DeleteConversationAndDeleteAllMsgPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void InsertSingleMessageToLocalStorage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> message,
    ffi.Pointer<ffi.Char> recvID,
    ffi.Pointer<ffi.Char> sendID,
  ) {
    return _InsertSingleMessageToLocalStorage(
      operationID,
      message,
      recvID,
      sendID,
    );
  }

  late final _InsertSingleMessageToLocalStoragePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('InsertSingleMessageToLocalStorage');
  late final _InsertSingleMessageToLocalStorage =
      _InsertSingleMessageToLocalStoragePtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void InsertGroupMessageToLocalStorage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> message,
    ffi.Pointer<ffi.Char> groupID,
    ffi.Pointer<ffi.Char> sendID,
  ) {
    return _InsertGroupMessageToLocalStorage(
      operationID,
      message,
      groupID,
      sendID,
    );
  }

  late final _InsertGroupMessageToLocalStoragePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('InsertGroupMessageToLocalStorage');
  late final _InsertGroupMessageToLocalStorage =
      _InsertGroupMessageToLocalStoragePtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void SearchLocalMessages(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> searchParam,
  ) {
    return _SearchLocalMessages(
      operationID,
      searchParam,
    );
  }

  late final _SearchLocalMessagesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('SearchLocalMessages');
  late final _SearchLocalMessages = _SearchLocalMessagesPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void SetMessageLocalEx(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
    ffi.Pointer<ffi.Char> clientMsgID,
    ffi.Pointer<ffi.Char> localEx,
  ) {
    return _SetMessageLocalEx(
      operationID,
      conversationID,
      clientMsgID,
      localEx,
    );
  }

  late final _SetMessageLocalExPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('SetMessageLocalEx');
  late final _SetMessageLocalEx = _SetMessageLocalExPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void GetSpecifiedFriendsInfo(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> userIDList,
  ) {
    return _GetSpecifiedFriendsInfo(
      operationID,
      userIDList,
    );
  }

  late final _GetSpecifiedFriendsInfoPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('GetSpecifiedFriendsInfo');
  late final _GetSpecifiedFriendsInfo = _GetSpecifiedFriendsInfoPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void GetFriendList(
    ffi.Pointer<ffi.Char> operationID,
  ) {
    return _GetFriendList(
      operationID,
    );
  }

  late final _GetFriendListPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'GetFriendList');
  late final _GetFriendList =
      _GetFriendListPtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  void GetFriendListPage(
    ffi.Pointer<ffi.Char> operationID,
    int offset,
    int count,
  ) {
    return _GetFriendListPage(
      operationID,
      offset,
      count,
    );
  }

  late final _GetFriendListPagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Int32,
              ffi.Int32)>>('GetFriendListPage');
  late final _GetFriendListPage = _GetFriendListPagePtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, int, int)>();

  void SearchFriends(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> searchParam,
  ) {
    return _SearchFriends(
      operationID,
      searchParam,
    );
  }

  late final _SearchFriendsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('SearchFriends');
  late final _SearchFriends = _SearchFriendsPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void CheckFriend(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> userIDList,
  ) {
    return _CheckFriend(
      operationID,
      userIDList,
    );
  }

  late final _CheckFriendPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('CheckFriend');
  late final _CheckFriend = _CheckFriendPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void AddFriend(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> userIDReqMsg,
  ) {
    return _AddFriend(
      operationID,
      userIDReqMsg,
    );
  }

  late final _AddFriendPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('AddFriend');
  late final _AddFriend = _AddFriendPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void SetFriendRemark(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> userIDRemark,
  ) {
    return _SetFriendRemark(
      operationID,
      userIDRemark,
    );
  }

  late final _SetFriendRemarkPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('SetFriendRemark');
  late final _SetFriendRemark = _SetFriendRemarkPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void DeleteFriend(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> friendUserID,
  ) {
    return _DeleteFriend(
      operationID,
      friendUserID,
    );
  }

  late final _DeleteFriendPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('DeleteFriend');
  late final _DeleteFriend = _DeleteFriendPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void GetFriendApplicationListAsRecipient(
    ffi.Pointer<ffi.Char> operationID,
  ) {
    return _GetFriendApplicationListAsRecipient(
      operationID,
    );
  }

  late final _GetFriendApplicationListAsRecipientPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'GetFriendApplicationListAsRecipient');
  late final _GetFriendApplicationListAsRecipient =
      _GetFriendApplicationListAsRecipientPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>)>();
